# secure-ntp

./: Makefile  README.md  meson.build  meson_options.txt
conf/: meson.build  nts-timesyncd.conf.in
src/basic/: .format-util.c.swp  .process-util.c.swo  build.c  build.h  cap-from-name.h  cgroup-util.c  chattr-util.c  copy.c  copy.h  env-file.c  fd-util.c  format-util.h  fs-util.c  fs-util.h  io-util.c  label.c  log.c  memfd-util.c  memory-util.h  meson.build  mkdir-label.c  os-util.c  parse-printf-format.c  parse-printf-format.h  proc-cmdline.c  procfs-util.c  sigbus.c  smack-util.c  socket-util.c  spawn-polkit-agent.c  spawn-polkit-agent.h  tmpfile-util.c  tmpfile-util.h  unit-def.c  user-util.c  user-util.h  util.c
src/basic/linux/: .in6.h.swp
src/libsystemd/: meson.build
src/libsystemd/sd-network/: network-util.c
src/nts-timesync/: 80-systemd-timesync.list  meson.build  nts-timesyncd.conf  org.freedesktop.ntstimesync1.conf  org.freedesktop.ntstimesync1.service  timesyncd-bus.c  timesyncd-conf.c  timesyncd-manager.c  timesyncd-manager.h  timesyncd-ntske-client.c  timesyncd.c
src/secure-timesync/: meson.build  timesyncd-gperf.gperf  timesyncd-manager.c  timesyncd-nts-client.c  timesyncd.c  user-runtime-dir.c
src/shared/: acl-util.c  conf-parser.c  conf-parser.h  dns-domain.c  dns-domain.h  exec-util.c  exec-util.h  libfido2-util.c  main-func.h  meson.build  musl_missing.h  pager.c  pkcs11-util.c  pkcs11-util.h  pretty-print.c  serialize.c  spawn-polkit-agent.c  test-tables.h  tests.h  utmp-wtmp.c  utmp-wtmp.h
src/systemd/: meson.build  sd-id128.h  sd-login.h  sd-path.h
src/timesync/: meson.build  nts-timesyncd-gperf.gperf  nts-timesyncd.conf.in  org.freedesktop.ntstimesync1.conf  org.freedesktop.ntstimesync1.service  timesync  timesyncd-bus.c  timesyncd-conf.c  timesyncd-manager.c  timesyncd-manager.h  timesyncd-ntske-client.c  timesyncd-ntske-protocol.c  timesyncd-server.c  timesyncd-server.h
units/: meson.build  nts-timesyncd.service.in
